[Minor] Reformat TableConfigUtils